--- a/app/pages/thankyou.html
+++ b/app/pages/thankyou.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Video</title>
+    <title>Thank you</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -69,64 +69,22 @@
     </nav>
     <main class="main-active">
         <button id="sidebar-button" class="btn btn-primary btn-sm">
-            <img alt="list-icon" src="/assets/list.svg">
+            <img alt="list-icon" src="/assets/list.svg" />
         </button>
-        <section id="upload-video">
-            <div class="button-group">
-                <button class="btn btn-outline-dark btn-lg">Video</button>
-                <button class="btn btn-outline-primary btn-lg">Comic</button>
-            </div>
-            <div class="row context">
-                <div class="col-md add-video">
-                    <h3>Drag Video Here</h3>
-                </div>
-                <div class="col-md add-information">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="title">TITLE</span>
-                        </div>
-                        <input placeholder="Required field" type="text" class="form-control"
-                            aria-label="Sizing example input" aria-describedby="TITLE">
-                    </div>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="author">AUTHOR</span>
-                        </div>
-                        <input placeholder="Required field" type="text" class="form-control"
-                            aria-label="Sizing example input" aria-describedby="author">
-                    </div>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">GENRES</span>
-                        </div>
-                        <div class="form-control">
-                            <select class="genre-select">
-                                <option disabled>Option selected</option>
-                                <option value="Action">Action</option>
-                                <option value="Adventure">Adventure</option>
-                                <option value="Comedy">Comedy</option>
-                                <option value="Drama">Drama</option>
-                                <option value="Slice of Life">Slice of Life</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="input-group-description">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="Description">DESCRIPTION</span>
-                        </div>
-                        <textarea placeholder="Type something" type="text" class="form-control"
-                            aria-label="Sizing example input" aria-describedby="Description"></textarea>
-                    </div>
-                    <button class="btn btn-primary btn-lg">
-                        <div class="icon-text">Upload</div>
-                        <img class="icon" src="/assets/video.svg" alt="Upload">
-                    </button>
-                </div>
+        <section id="thank-you">
+            <div class="content">
+                <h2>Thank You</h2>
+                <p>Chúc mừng bạn đã trở thành thành viên của Motion Station</p>
+                </br>
+                <p>Chúc bạn coi truyện vui vẻ</p>
+                </br>
+                <p class="text-primary">Website sẽ chuyển hướng về trang chủ cho bạn</p>
+                <p class="text-primary">Chick vào <a href="/index.html">đây</a> nếu trang chưa chuyển hướng</p>
             </div>
         </section>
     </main>
 
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 </body>
 
