--- a/app/pages/premium.html
+++ b/app/pages/premium.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <title>Premium</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -71,75 +71,77 @@
         <button id="sidebar-button" class="btn btn-primary btn-sm" >
             <img alt="list-icon" src="/assets/list.svg">
         </button>
-        <section id="payment">
-            <h3>Thanh toán</h3>
-            <h5>Chọn các hình thức thanh toán</h5>
-            <form>
-                <div class="billing-info">
-                    <h4>Billing Info</h4>
-                    <div class="form-group">
-                        <label for="fullname">FULLNAME</label>
-                        <input type="text" class="form-control" name="fullname" id="fullname">
-                    </div>
-                    <div class="form-group">
-                        <label for="address">ADDRESS</label>
-                        <input type="text" class="form-control" name="address" id="address">
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="city">CITY</label>
-                            <input type="text" class="form-control" name="city" id="city">
+        <section id="premium">
+            <h3>Đăng kí gói Motion. Station</h3>
+            <h5>Thoả mãn nhu cầu của bạn</h5>
+            <div class="options">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="badge badge-secondary">
+                            30 DAYS TRIAL
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="zipcode">ZIP CODE</label>
-                            <input type="text" class="form-control" name="zipcode" id="zipcode">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="country">COUNTRY</label>
-                        <div class="country-select">
-                            <select class="form-control" id="country">
-                                <option selected>Choose...</option>
-                                <option value="japan">Japan</option>
-                                <option value="korea">Korean</option>
-                                <option value="vietnam">Vietnam</option>
-                            </select>
+                        <h2><sup>$ </sup>00<sub> /month</sub></h2>
+                        <div class="list-group">
+                            <div class="list-group-item">
+                                <div>Memebers</div>
+                                <b>Free</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Projects</div>
+                                <b>1</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Users</div>
+                                <b>1</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Storage</div>
+                                <b>-</b>
+                            </div>
+                            <div class="list-group-item border-none">
+                                <div>More</div>
+                                <b>-</b>
+                            </div>
                         </div>
                     </div>
+                    <a href="/pages/payment.html" class="btn btn-primary btn-lg">CURRENT PLAN</a>
                 </div>
-                <div class="credit-card">
-                    <h4>Credit Card Info</h4>
-                    <div class="form-row">
-                        <div class="form-group col-md-8">
-                            <label for="cardnumber">CARDNUMBER</label>
-                            <input type="text" class="form-control" name="cardnumber" id="cardnumber">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="badge badge-secondary">
+                            PERSONAL
                         </div>
-                        <div class="form-group col-md-4">
-                            <label for="typecard">TYPE</label>
-                            <input type="text" class="form-control" name="typecard" id="typecard">
+                        <h2><sup>$ </sup>20<sub> /month</sub></h2>
+                        <div class="list-group">
+                            <div class="list-group-item">
+                                <div>Memebers</div>
+                                <b>30</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Projects</div>
+                                <b>30</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Users</div>
+                                <b>Unlimited</b>
+                            </div>
+                            <div class="list-group-item">
+                                <div>Storage</div>
+                                <b>20gb</b>
+                            </div>
+                            <div class="list-group-item border-none">
+                                <div>More</div>
+                                <b>-</b>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="cardholdername">CARDHOLDER NAME</label>
-                        <input type="text" class="form-control" name="cardholdername" id="cardholdername">
-                    </div>
-                    <div class="form-group">
-                        <label for="expiredate">EXPIRE DATE</label>
-                        <input type="date" class="form-control" name="expiredate" id="expiredate">
-                    </div>
-                    <div class="form-group">
-                        <label for="cvv">CVV</label>
-                        <input type="text" class="form-control" name="cvv" id="cvv">
-                    </div>
+                    <a href="/pages/payment.html" class="btn btn-primary btn-lg">UPGRADE</a>
                 </div>
-            </form>
-            <div class="btn-centered">
-                <button type="button" class="btn btn-primary btn-lg">Confirm</button>
             </div>
         </section>
     </main>
-    
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 </body>
 
